1. 实现detail cell 根据chapter数量动态计算高度

--- a/LiveStone/LSBookChapterCell.xib
+++ b/LiveStone/LSBookChapterCell.xib
@@ -14,7 +14,7 @@
                 <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zDm-UW-zUs">
                     <rect key="frame" x="5" y="5" width="30" height="30"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="1"/>
                     <connections>
                         <action selector="chapterAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="M3J-bq-bAS"/>
