--- a/LiveStone/LSBookCollectionViewCell.xib
+++ b/LiveStone/LSBookCollectionViewCell.xib
@@ -9,11 +9,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UICollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="45"/>
+            <rect key="frame" x="0.0" y="0.0" width="108" height="45"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="创" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQT-QH-fPH">
-                    <rect key="frame" x="8" y="8" width="30" height="30"/>
+                    <rect key="frame" x="3" y="8" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="30" id="V7F-0Y-elY"/>
                         <constraint firstAttribute="height" constant="30" id="d8f-uL-LOW"/>
@@ -23,26 +23,26 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="世纪" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82k-lo-oLx">
-                    <rect key="frame" x="33" y="15" width="35" height="20"/>
+                    <rect key="frame" x="28" y="15" width="65" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="35" id="3VK-O3-M5A"/>
+                        <constraint firstAttribute="width" constant="65" id="3VK-O3-M5A"/>
                         <constraint firstAttribute="height" constant="20" id="Dhs-LI-7Pz"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="82k-lo-oLx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" constant="25" id="1cs-G9-G3x"/>
+                <constraint firstItem="82k-lo-oLx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" constant="20" id="1cs-G9-G3x"/>
                 <constraint firstItem="oQT-QH-fPH" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="fm9-th-PSl"/>
-                <constraint firstItem="oQT-QH-fPH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="tVx-AF-dqR"/>
+                <constraint firstItem="oQT-QH-fPH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" constant="-5" id="tVx-AF-dqR"/>
                 <constraint firstItem="82k-lo-oLx" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="2" id="xtc-Nk-Arz"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="246" y="240.5"/>
+            <point key="canvasLocation" x="250" y="240.5"/>
         </view>
     </objects>
 </document>
