--- a/LiveStone/LSRegisterViewController.xib
+++ b/LiveStone/LSRegisterViewController.xib
@@ -182,12 +182,27 @@
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yPn-2x-TIf">
+                            <rect key="frame" x="515" y="396" width="60" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="60" id="cjd-gq-sdb"/>
+                                <constraint firstAttribute="height" constant="30" id="pN2-O7-cvF"/>
+                            </constraints>
+                            <state key="normal" title="注册帐号">
+                                <color key="titleColor" red="0.23921568630000001" green="0.84705882349999995" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="joinUsAction:" destination="-1" eventType="touchUpInside" id="0YP-Qe-2sT"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="PrB-Kd-d7e" secondAttribute="trailing" constant="25" id="2Wg-ao-Hpi"/>
                         <constraint firstItem="Ckk-xs-UoG" firstAttribute="top" secondItem="PrB-Kd-d7e" secondAttribute="bottom" constant="35" id="4ZT-MR-XzJ"/>
                         <constraint firstAttribute="bottom" secondItem="Ckk-xs-UoG" secondAttribute="bottom" constant="200" id="XGk-A4-ot2"/>
+                        <constraint firstItem="yPn-2x-TIf" firstAttribute="top" secondItem="Ckk-xs-UoG" secondAttribute="bottom" constant="8" id="XPz-kO-VKe"/>
+                        <constraint firstAttribute="trailing" secondItem="yPn-2x-TIf" secondAttribute="trailing" constant="25" id="fEX-B9-eI2"/>
                         <constraint firstItem="pG2-7f-kFK" firstAttribute="centerX" secondItem="Wby-YC-cQI" secondAttribute="centerX" id="foF-eW-Bjf"/>
                         <constraint firstItem="pG2-7f-kFK" firstAttribute="top" secondItem="Wby-YC-cQI" secondAttribute="topMargin" constant="80" id="jyc-kn-8ob"/>
                         <constraint firstItem="PrB-Kd-d7e" firstAttribute="leading" secondItem="Wby-YC-cQI" secondAttribute="leading" constant="25" id="k6m-A8-lv9"/>
