1.新增图片加载库SDWebImage. 2.完成登录功能. 3.完成注销功能. 4.登录成功密码自动保存进keychain. 5.首次启动应用自动登录,自动更新个人资料. 6.新增HUD扩展方法toastMessage,默认显示2秒后隐藏. 7.用户登录后"我"界面自动更新 8.新增退出确认提示.

--- a/LiveStone/Base.lproj/Main.storyboard
+++ b/LiveStone/Base.lproj/Main.storyboard
@@ -312,6 +312,7 @@
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UserDefaultAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="oMn-H4-m7f">
                                                     <rect key="frame" x="14" y="15" width="70" height="70"/>
+                                                    <color key="backgroundColor" red="0.8862745098" green="0.8862745098" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="70" id="8BL-SF-TZt"/>
                                                         <constraint firstAttribute="height" constant="70" id="RFg-VO-g1s"/>
